--- a/02-open-source/huggingface-mistral-7b.ipynb
+++ b/02-open-source/huggingface-mistral-7b.ipynb
@@ -27,46 +27,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "506fab2a-a50c-42bd-a106-c83a9d2828ea",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "--2024-06-13 19:36:42--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 3832 (3.7K) [text/plain]\n",
-      "Saving to: ‘minsearch.py’\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "\n",
-      "minsearch.py        100%[===================>]   3.74K  --.-KB/s    in 0s      \n",
-      "\n",
-      "2024-06-13 19:36:42 (50.3 MB/s) - ‘minsearch.py’ saved [3832/3832]\n",
-      "\n"
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100  3832  100  3832    0     0  18714      0 --:--:-- --:--:-- --:--:-- 19256\n"
      ]
     }
    ],
    "source": [
-    "!rm -f minsearch.py\n",
-    "!wget https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py"
+    "!curl -O https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3ac947de-effd-4b61-8792-a6d7a133f347",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x7fc130288970>"
+       "<minsearch.Index at 0x2c18ceef7a0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "8f087272-b44d-4738-9ea2-175ec63a058b",
    "metadata": {},
    "outputs": [],
@@ -118,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fe8bff3e-b672-42be-866b-f2d9bb217106",
    "metadata": {},
    "outputs": [],
@@ -132,28 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "07d4639a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ['HF_TOKEN'] = 'hf_blabla'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "2b69a481",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from huggingface_hub import login"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "6650945d",
    "metadata": {},
    "outputs": [
     {
@@ -161,19 +134,22 @@
      "output_type": "stream",
      "text": [
       "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
-      "Token is valid (permission: read).\n",
+      "Token is valid (permission: write).\n",
       "Your token has been saved to /run/cache/token\n",
       "Login successful\n"
      ]
     }
    ],
    "source": [
-    "login(token=os.environ['HF_TOKEN'])"
+    "from huggingface_hub import login\n",
+    "\n",
+    "# Login using your token\n",
+    "login(token=\"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\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cfe5b58d",
    "metadata": {},
    "outputs": [],
@@ -184,24 +160,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "311fd41d",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95ce1023e96346768985fad0ffedbaad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/571 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -212,138 +174,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab9ccd09e5c546c18678fab88a4b4536",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors.index.json:   0%|          | 0.00/25.1k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "037d21f6a6b9419ca83f5ead1cd22f85",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fc2ef41f8414b77a8f833b8e1e794ec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00001-of-00002.safetensors:   0%|          | 0.00/9.94G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5daa1086719b416cade75549effb2337",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00002-of-00002.safetensors:   0%|          | 0.00/4.54G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63b1c033ad86405eb7455989951ba2df",
+       "model_id": "214fd01d24b74186a5f149d846ceddaf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dc66a7b147246f28eacf34998eb0c4f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "generation_config.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28ea347a775e4b7d91e0923bfc89b697",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/967 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17b14dc41f66482abd9efe217be69872",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.model:   0%|          | 0.00/493k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df30ec1fb8864ea39286b637f9a0cfcd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/1.80M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6613cd42eae24c86b3776f2062b19de7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/72.0 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -360,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4b7f6fd7",
    "metadata": {},
    "outputs": [],
@@ -371,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "da66a082",
    "metadata": {},
    "outputs": [],
@@ -395,14 +231,15 @@
     "    return prompt\n",
     "\n",
     "def llm(prompt):\n",
-    "    response = generator(prompt, max_length=500, temperature=0.7, top_p=0.95, num_return_sequences=1)\n",
+    "    response = generator(prompt, max_length=527, temperature=0.7, top_p=0.7, num_return_sequences=1)\n",
     "    response_final = response[0]['generated_text']\n",
+    "\n",
     "    return response_final[len(prompt):].strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "41b774d3",
    "metadata": {},
    "outputs": [
@@ -419,7 +256,7 @@
        "'Yes, you can still join the course.'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,6 +264,32 @@
    "source": [
     "rag(\"I just discovered the course. Can I still join it?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "98b7933b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, you can still join the course.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf414c5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -445,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
