--- a/01-into/rag-intro.ipynb
+++ b/01-into/rag-intro.ipynb
@@ -103,7 +103,7 @@
     "# gets API Key from environment variable OPENAI_API_KEY\n",
     "client = OpenAI(\n",
     "  base_url=\"https://openrouter.ai/api/v1\",\n",
-    "  api_key=\"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\",\n",
+    "  api_key=\"\",\n",
     ")\n",
     "\n"
    ]
