--- a/02-open-source/huggingface-mistral-7b.ipynb
+++ b/02-open-source/huggingface-mistral-7b.ipynb
@@ -144,7 +144,7 @@
     "from huggingface_hub import login\n",
     "\n",
     "# Login using your token\n",
-    "login(token=\"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\")\n"
+    "login(token=\"\")\n"
    ]
   },
   {
