--- a/03-vector-search/eval/evaluate-text.ipynb
+++ b/03-vector-search/eval/evaluate-text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "8456b5b6-185b-440b-ab98-1822aac2fe4f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "620ed5a1-cc06-40a3-8627-891aed525cba",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,23 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "58a9daf0-9b68-48fb-b992-59782b625e33",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7bffc1ed5fd4de2a26975f894976043",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/948 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "100%|██████████| 948/948 [00:17<00:00, 55.28it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -87,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "id": "08c8586c-2976-4746-9b2d-0442c360211d",
    "metadata": {},
    "outputs": [],
@@ -100,7 +95,7 @@
     "                \"must\": {\n",
     "                    \"multi_match\": {\n",
     "                        \"query\": query,\n",
-    "                        \"fields\": [\"question^3\", \"text\", \"section\"],\n",
+    "                        \"fields\": [\"question^3\", \"text\", \"section^2\"],\n",
     "                        \"type\": \"best_fields\"\n",
     "                    }\n",
     "                },\n",
@@ -125,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d7ec3171-f2cc-4be5-8de5-4e8131cdeccb",
    "metadata": {},
    "outputs": [
@@ -159,7 +154,7 @@
        "  'id': '0bbf41ec'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "163d5e97-e1b7-45e1-ba1e-61fca4fc37a9",
    "metadata": {},
    "outputs": [],
@@ -183,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "e3da963b-cd17-471b-9cff-7f8c4276b915",
    "metadata": {},
    "outputs": [],
@@ -193,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "d53d3beb-d699-46c8-bc85-953afc4ef48d",
    "metadata": {},
    "outputs": [],
@@ -203,23 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "1e08bcee-4c70-44b8-9525-ff89d9b2320b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df5f0694de064d4fb7f220c79f6998c8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4627 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4627/4627 [00:12<00:00, 356.04it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -234,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "83e95114-afdb-40de-b044-0d83d07722c9",
    "metadata": {},
    "outputs": [],
@@ -265,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "8959c9ff-5bbe-4729-8fa3-cdc51ed10f5f",
    "metadata": {},
    "outputs": [],
@@ -282,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "842255b5-18f2-4102-9689-a5835e0a621c",
    "metadata": {},
    "outputs": [],
@@ -300,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "d56661b2-d5ee-4683-9514-94b825da7ae3",
    "metadata": {},
    "outputs": [
@@ -310,7 +298,7 @@
        "0.5833333333333334"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "dc1348d1-6dfa-4f80-a532-0dd423b5333d",
    "metadata": {},
    "outputs": [
@@ -331,7 +319,7 @@
        "0.5277777777777778"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,17 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "e12883f1-13c1-4fe4-83ac-a4833d1cc97b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7395720769397017, 0.6032418413658963)"
+       "(0.7395720769397017, 0.602960881780852)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,17 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "d10bb1fd-6139-4450-864e-23f7b8531dee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x29109dae150>"
+       "<minsearch.Index at 0x7dd582d65070>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "e3d12e7b-eb97-4d47-b77f-c8cbb0d0ed73",
    "metadata": {},
    "outputs": [],
@@ -420,23 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "351255d3-2fa5-400e-954a-72c115e94637",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fdae1fbca2b4cd6b887b751364aec06",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4627 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4627/4627 [00:13<00:00, 351.38it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -451,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "b9c2a382-edce-4e6a-8d2e-caabf43f4483",
    "metadata": {},
    "outputs": [
@@ -461,7 +442,7 @@
        "(0.7722066133563864, 0.661454506159499)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "f11baaff-43d9-4b8c-a896-561b86e85743",
    "metadata": {},
    "outputs": [],
@@ -505,31 +486,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "id": "611846a8-a977-4483-bd01-61575821c18c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21adf8ef14ad490992a05478d63715f1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4627 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4627/4627 [00:08<00:00, 532.35it/s]\n"
+     ]
     },
     {
      "data": {
       "text/plain": [
-       "{'hit_rate': 0.7395720769397017, 'mrr': 0.6032418413658963}"
+       "{'hit_rate': 0.7410849362437865, 'mrr': 0.6032850659174416}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,23 +514,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "14cab5ff-f42e-4030-b7ba-6edf47d73d21",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40cdeba982f74f998c54fa301d4898f0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4627 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4627/4627 [00:13<00:00, 354.07it/s]\n"
+     ]
     },
     {
      "data": {
@@ -564,7 +531,7 @@
        "{'hit_rate': 0.7722066133563864, 'mrr': 0.661454506159499}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
