--- a/03-vector-search/eval/evaluate-vector.ipynb
+++ b/03-vector-search/eval/evaluate-vector.ipynb
@@ -18,7 +18,16 @@
    "execution_count": 2,
    "id": "5833e987-21f5-4788-8609-d32410bc7b10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from sentence_transformers import SentenceTransformer"
    ]
@@ -28,7 +37,16 @@
    "execution_count": 3,
    "id": "3e482cd0-0202-4a89-854d-90b50c75e520",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "model_name = 'multi-qa-MiniLM-L6-cos-v1'\n",
     "model = SentenceTransformer(model_name)"
@@ -36,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "341b331f-e3aa-41b7-91a2-b42cd3a57c2e",
    "metadata": {},
    "outputs": [],
@@ -46,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "5783a592-5d76-44ee-89a7-05615ef966bf",
    "metadata": {},
    "outputs": [
@@ -56,7 +74,7 @@
        "384"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "620ed5a1-cc06-40a3-8627-891aed525cba",
    "metadata": {},
    "outputs": [
@@ -77,7 +95,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "91721a90-96d6-4ef9-8baf-a3d42c4b03e1",
    "metadata": {},
    "outputs": [],
@@ -139,23 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "ad8a4ba1-35d8-4650-9267-86afabef7386",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb5b7e669e31453d80aef3a5c2fdbe2b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/948 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 948/948 [01:09<00:00, 13.56it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -171,23 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "d5b27abe-a0c2-426c-9780-3b1c0534dbe6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb4da719c1374c1ebd437dd5b3e53e1e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/948 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 948/948 [00:26<00:00, 35.56it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -197,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "82a78984-1440-4195-9513-106109013fce",
    "metadata": {},
    "outputs": [],
@@ -207,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "8a5ac3e8-8d75-48f6-8d3c-0b25d227d1f2",
    "metadata": {},
    "outputs": [],
@@ -217,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "ecba8e3b-7f61-402c-8106-62bde9eb1746",
    "metadata": {},
    "outputs": [],
@@ -255,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "cc09b90a-a88b-4678-a613-eb68e16136d5",
    "metadata": {},
    "outputs": [],
@@ -271,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "163d5e97-e1b7-45e1-ba1e-61fca4fc37a9",
    "metadata": {},
    "outputs": [],
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "e3da963b-cd17-471b-9cff-7f8c4276b915",
    "metadata": {},
    "outputs": [],
@@ -291,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "d53d3beb-d699-46c8-bc85-953afc4ef48d",
    "metadata": {},
    "outputs": [],
@@ -301,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "0deced29-bae5-4b6c-b2b8-53ce46b4f8ab",
    "metadata": {},
    "outputs": [
@@ -313,7 +317,7 @@
        " 'document': 'c02e79ef'}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "8959c9ff-5bbe-4729-8fa3-cdc51ed10f5f",
    "metadata": {},
    "outputs": [],
@@ -341,15 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e2970e2-4481-4378-8e29-4fe30369cd7f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "842255b5-18f2-4102-9689-a5835e0a621c",
    "metadata": {},
    "outputs": [],
@@ -367,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "f11baaff-43d9-4b8c-a896-561b86e85743",
    "metadata": {},
    "outputs": [],
@@ -389,23 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "f1d3530e-1406-49dd-bba9-914f6a39d7f2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f89bc2d454c4df48c39e8742bf362e3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4627 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4627/4627 [01:28<00:00, 52.51it/s]\n"
+     ]
     },
     {
      "data": {
@@ -413,7 +402,7 @@
        "{'hit_rate': 0.773071104387292, 'mrr': 0.6666810748505158}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "e87f0987-02e9-4e2c-a091-14a75c9ce58d",
    "metadata": {},
    "outputs": [],
@@ -448,23 +437,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "d676bd5e-4abc-4799-bb37-c1a86b3b9872",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b14f76431e374bf2beeba36608578533",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4627 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4627/4627 [01:22<00:00, 56.14it/s]\n"
+     ]
     },
     {
      "data": {
@@ -472,7 +454,7 @@
        "{'hit_rate': 0.8286146531229739, 'mrr': 0.7062315395144454}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,23 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "id": "13a47c3e-036a-4212-912c-a61de0daf6cd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce2651726e11402c9c43b8adc72904f5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4627 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4627/4627 [01:18<00:00, 58.93it/s]\n"
+     ]
     },
     {
      "data": {
@@ -507,7 +482,7 @@
        "{'hit_rate': 0.9172249837907932, 'mrr': 0.824306606152295}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "id": "20f4d5f5-617d-4e89-8cc1-4acaed270be4",
    "metadata": {},
    "outputs": [],
@@ -583,23 +558,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "id": "7ba72a59-7d0e-4d61-90c4-008e6341f7dd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23d4bec1617342b2a61ae3ff37e6a2f1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4627 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4627/4627 [01:22<00:00, 56.00it/s]\n"
+     ]
     },
     {
      "data": {
@@ -607,7 +575,7 @@
        "{'hit_rate': 0.9023125135076724, 'mrr': 0.804480945176861}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
